# bug-reports-and-pr-examples

./: README.md
src/composition/: CMakeLists.txt
src/composition/include/composition/: talker_component.hpp
src/composition/src/: manual_composition.cpp  talker_component.cpp
